# M5CoreS3-UserDemo

./: .gitignore  CMakeLists.txt  cp2win.sh  partitions.csv  sdkconfig  sdkconfig.old
backup/: 1.c  2.c  faceRecogniz.cpp  faceRecogniz.hpp  fr-main.cpp  fr-main.hpp
components/M5CoreS3-UserBSP/: CMakeLists.txt  M5CoreS3.cpp  M5CoreS3.hpp  idf_component.yml
components/esp-dl/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  README_cn.md  idf_component.yml
components/esp-dl/ci/: utils.sh
components/esp-dl/docs/: Doxyfile  README.md  conf_common.py  requirements.txt
components/esp-dl/docs/_static/: docs_version.js
components/esp-dl/docs/en/: conf.py  get-started.rst  glossary.rst  index.rst  introduction.rst  performance.rst
components/esp-dl/docs/en/tools/: image-tools.rst  index.rst
components/esp-dl/docs/en/tutorials/: customizing-a-layer-step-by-step.rst  deploying-models-through-tvm.rst  deploying-models.rst  index.rst  (+1 more)
components/esp-dl/docs/zh_CN/: conf.py  get-started.rst  glossary.rst  index.rst  introduction.rst  performance.rst
components/esp-dl/include/tool/: dl_tool.hpp
components/esp-dl/include/tvm/: esp_kernel.h
components/esp-who/: CMakeLists.txt
components/esp_lvgl_port/include/: esp_lvgl_port.h
components/fb_gfx/: CMakeLists.txt  fb_gfx.c
components/fb_gfx/include/: fb_gfx.h
components/m5stack_core_s3/: m5stack_core_s3.c
components/m5stack_core_s3/include/bsp/: m5stack_core_s3.h
main/: CMakeLists.txt  app_main.cpp  idf_component.yml  scr1.c
main/apps/faceRecogniz/: faceRecogniz.cpp  faceRecogniz.hpp
(+21 files in other folders)
